--- a/views/admin/editService.ejs
+++ b/views/admin/editService.ejs
@@ -19,7 +19,7 @@
         <div class="card">
           <div class="card-header text-center title">
             
-            Chỉnh sửa dịch vụ <input type="text" name="typeServicename" value="<%= FoundService.typeServiceName %>"> 
+            Danh Sach Dich Vu <input type="text" name="typeServicename" value="<%= FoundService.typeServiceName %>"> 
             
             
           </div>
