--- a/views/admin/service.ejs
+++ b/views/admin/service.ejs
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="card shadow">
         <div class="card-header title text-center"> 
-          Cac  dịch vụ 
+          Chỉnh sửa dịch vụ 
         </div>
         <div class="card-body">
         <% Service.forEach(function(element) { %>
