--- a/views/include/navagation.ejs
+++ b/views/include/navagation.ejs
@@ -31,7 +31,7 @@
       </li>
       <li class="item">
         <a href="/admin/list-schedule" class="menu-btn">
-            <i class="fas fa-info-circle"></i><span> hẹn </span>
+            <i class="fas fa-info-circle"></i><span> phan tu moi </span>
         </a>
     </li>
   </div>
